--- a/main.html
+++ b/main.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <h1>目次</h1>
+  <div style="display: flex; align-items: center;">
+    <h1 style="margin-right: 20px;">目次</h1>
+    <img src="qrcode.jpg" alt="QR Code">
+  </div>
   <ul>
     <li><a href="2taku/doubutu/s1.html">どうぶつ</a></li>
     <li><a href="2taku/kudamono/s1.html">くだもの</a></li>
