--- a/main.html
+++ b/main.html
@@ -14,6 +14,8 @@
     <li><a href="2taku/kudamono/s1.html">くだもの</a></li>
     <li><a href="20250717ma/s1.html">20250717ma</a></li>
     <li><a href="20250719siwake/s1.html">20250719siwake</a></li>
+    
+    <li><a href="20251210tokutengame/s1.html">得点ゲーム</a></li>
   </ul>
 </body>
 </html>
